feat: update html meta deta description and name

--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="愛生．計劃為 Givemunity 捐款平台的試驗計劃，為期六個月，旨在為十間慈善機構籌得穩定的恆常善款。 Give-back Campaign is a trial program of Givemunity's Donation Platform. The campaign lasts for 6 months, and is targeted to raise funding for 10 charity units."/>
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,100,300,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>愛生．計劃 一籃子捐款 Give-back Campaign Bundle Donation - Givemunity</title>
   </head>
   <body>
     <noscript>
